added posting route for creating new tasks

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,23 @@
           <textarea rows="6" cols="45" name="content">content</textarea>
           <button type="submit"><span class="fas fa-plus">Add Task</span></button>
         </form>
+
+        <ul class="todo-list">
+          <% todoTasks.forEach(task => { %>
+
+          <li class="todo-list-item">
+            <div class="todo-list-item-title"><%= task.title %></div>
+            <div class="todo-list-item-content"><%= task.content %></div>
+            <a href="/edit/<%= task._id %>" class="edit"
+              ><span class="fas fa-edit"></span
+            ></a>
+            <a href="/remove/<%= task._id %>" class="remove"
+              ><span class="fas fa-times"></span
+            ></a>
+          </li>
+
+          <% }) %>
+        </ul>
       </section>
     </section>
   </body>
